compiler/mesh-parser/tests/snapshots/parser_tests__struct_deriving_empty_clause.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..41
  STRUCT_DEF@0..41
    STRUCT_KW@0..6 "struct"
    WHITESPACE@6..7 " "
    NAME@7..12
      IDENT@7..12 "Empty"
    WHITESPACE@12..13 " "
    DO_KW@13..15 "do"
    NEWLINE@15..16 "\n"
    WHITESPACE@16..18 "  "
    STRUCT_FIELD@18..26
      NAME@18..19
        IDENT@18..19 "x"
      WHITESPACE@19..20 " "
      TYPE_ANNOTATION@20..26
        COLON_COLON@20..22 "::"
        WHITESPACE@22..23 " "
        IDENT@23..26 "Int"
    NEWLINE@26..27 "\n"
    END_KW@27..30 "end"
    WHITESPACE@30..31 " "
    DERIVING_CLAUSE@31..41
      IDENT@31..39 "deriving"
      L_PAREN@39..40 "("
      R_PAREN@40..41 ")"
  EOF@41..41 ""
