compiler/mesh-parser/tests/snapshots/parser_tests__struct_simple.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"struct Point do\\n  x :: Float\\n  y :: Float\\nend\")"
---
SOURCE_FILE@0..45
  STRUCT_DEF@0..45
    STRUCT_KW@0..6 "struct"
    WHITESPACE@6..7 " "
    NAME@7..12
      IDENT@7..12 "Point"
    WHITESPACE@12..13 " "
    DO_KW@13..15 "do"
    NEWLINE@15..16 "\n"
    WHITESPACE@16..18 "  "
    STRUCT_FIELD@18..28
      NAME@18..19
        IDENT@18..19 "x"
      WHITESPACE@19..20 " "
      TYPE_ANNOTATION@20..28
        COLON_COLON@20..22 "::"
        WHITESPACE@22..23 " "
        IDENT@23..28 "Float"
    NEWLINE@28..29 "\n"
    WHITESPACE@29..31 "  "
    STRUCT_FIELD@31..41
      NAME@31..32
        IDENT@31..32 "y"
      WHITESPACE@32..33 " "
      TYPE_ANNOTATION@33..41
        COLON_COLON@33..35 "::"
        WHITESPACE@35..36 " "
        IDENT@36..41 "Float"
    NEWLINE@41..42 "\n"
    END_KW@42..45 "end"
  EOF@45..45 ""
