compiler/mesh-parser/tests/snapshots/parser_tests__sum_type_deriving_clause_snapshot.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..39
  SUM_TYPE_DEF@0..39
    TYPE_KW@0..4 "type"
    WHITESPACE@4..5 " "
    NAME@5..10
      IDENT@5..10 "Shape"
    WHITESPACE@10..11 " "
    DO_KW@11..13 "do"
    NEWLINE@13..14 "\n"
    WHITESPACE@14..16 "  "
    VARIANT_DEF@16..22
      IDENT@16..22 "Circle"
    NEWLINE@22..23 "\n"
    END_KW@23..26 "end"
    WHITESPACE@26..27 " "
    DERIVING_CLAUSE@27..39
      IDENT@27..35 "deriving"
      L_PAREN@35..36 "("
      IDENT@36..38 "Eq"
      R_PAREN@38..39 ")"
  EOF@39..39 ""
