compiler/mesh-parser/tests/snapshots/parser_tests__sum_type_generic.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"type Option<T> do\\n  Some(T)\\n  None\\nend\")"
---
SOURCE_FILE@0..38
  SUM_TYPE_DEF@0..38
    TYPE_KW@0..4 "type"
    WHITESPACE@4..5 " "
    NAME@5..11
      IDENT@5..11 "Option"
    GENERIC_PARAM_LIST@11..14
      LT@11..12 "<"
      IDENT@12..13 "T"
      GT@13..14 ">"
    WHITESPACE@14..15 " "
    DO_KW@15..17 "do"
    NEWLINE@17..18 "\n"
    WHITESPACE@18..20 "  "
    VARIANT_DEF@20..27
      IDENT@20..24 "Some"
      L_PAREN@24..25 "("
      TYPE_ANNOTATION@25..26
        IDENT@25..26 "T"
      R_PAREN@26..27 ")"
    NEWLINE@27..28 "\n"
    WHITESPACE@28..30 "  "
    VARIANT_DEF@30..34
      IDENT@30..34 "None"
    NEWLINE@34..35 "\n"
    END_KW@35..38 "end"
  EOF@38..38 ""
