compiler/mesh-parser/tests/snapshots/parser_tests__sum_type_multiple_positional.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"type Pair do\\n  Pair(Int, Int)\\nend\")"
---
SOURCE_FILE@0..33
  SUM_TYPE_DEF@0..33
    TYPE_KW@0..4 "type"
    WHITESPACE@4..5 " "
    NAME@5..9
      IDENT@5..9 "Pair"
    WHITESPACE@9..10 " "
    DO_KW@10..12 "do"
    NEWLINE@12..13 "\n"
    WHITESPACE@13..15 "  "
    VARIANT_DEF@15..29
      IDENT@15..19 "Pair"
      L_PAREN@19..20 "("
      TYPE_ANNOTATION@20..23
        IDENT@20..23 "Int"
      COMMA@23..24 ","
      WHITESPACE@24..25 " "
      TYPE_ANNOTATION@25..28
        IDENT@25..28 "Int"
      R_PAREN@28..29 ")"
    NEWLINE@29..30 "\n"
    END_KW@30..33 "end"
  EOF@33..33 ""
