compiler/mesh-parser/tests/snapshots/parser_tests__sum_type_simple.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"type Shape do\\n  Circle(Float)\\n  Rectangle(width :: Float, height :: Float)\\n  Point\\nend\")"
---
SOURCE_FILE@0..86
  SUM_TYPE_DEF@0..86
    TYPE_KW@0..4 "type"
    WHITESPACE@4..5 " "
    NAME@5..10
      IDENT@5..10 "Shape"
    WHITESPACE@10..11 " "
    DO_KW@11..13 "do"
    NEWLINE@13..14 "\n"
    WHITESPACE@14..16 "  "
    VARIANT_DEF@16..29
      IDENT@16..22 "Circle"
      L_PAREN@22..23 "("
      TYPE_ANNOTATION@23..28
        IDENT@23..28 "Float"
      R_PAREN@28..29 ")"
    NEWLINE@29..30 "\n"
    WHITESPACE@30..32 "  "
    VARIANT_DEF@32..74
      IDENT@32..41 "Rectangle"
      L_PAREN@41..42 "("
      VARIANT_FIELD@42..56
        NAME@42..47
          IDENT@42..47 "width"
        WHITESPACE@47..48 " "
        TYPE_ANNOTATION@48..56
          COLON_COLON@48..50 "::"
          WHITESPACE@50..51 " "
          IDENT@51..56 "Float"
      COMMA@56..57 ","
      WHITESPACE@57..58 " "
      VARIANT_FIELD@58..73
        NAME@58..64
          IDENT@58..64 "height"
        WHITESPACE@64..65 " "
        TYPE_ANNOTATION@65..73
          COLON_COLON@65..67 "::"
          WHITESPACE@67..68 " "
          IDENT@68..73 "Float"
      R_PAREN@73..74 ")"
    NEWLINE@74..75 "\n"
    WHITESPACE@75..77 "  "
    VARIANT_DEF@77..82
      IDENT@77..82 "Point"
    NEWLINE@82..83 "\n"
    END_KW@83..86 "end"
  EOF@86..86 ""
