compiler/mesh-parser/tests/snapshots/parser_tests__trailing_closure_basic.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"run() do\\n  42\\nend\")"
---
SOURCE_FILE@0..17
  CALL_EXPR@0..17
    NAME_REF@0..3
      IDENT@0..3 "run"
    ARG_LIST@3..5
      L_PAREN@3..4 "("
      R_PAREN@4..5 ")"
    WHITESPACE@5..6 " "
    TRAILING_CLOSURE@6..17
      DO_KW@6..8 "do"
      BLOCK@8..14
        NEWLINE@8..9 "\n"
        WHITESPACE@9..11 "  "
        LITERAL@11..13
          INT_LITERAL@11..13 "42"
        NEWLINE@13..14 "\n"
      END_KW@14..17 "end"
  EOF@17..17 ""
