compiler/mesh-parser/tests/snapshots/parser_tests__tuple_expression.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"(1, 2, 3)\")"
---
SOURCE_FILE@0..9
  TUPLE_EXPR@0..9
    L_PAREN@0..1 "("
    LITERAL@1..2
      INT_LITERAL@1..2 "1"
    COMMA@2..3 ","
    WHITESPACE@3..4 " "
    LITERAL@4..5
      INT_LITERAL@4..5 "2"
    COMMA@5..6 ","
    WHITESPACE@6..7 " "
    LITERAL@7..8
      INT_LITERAL@7..8 "3"
    R_PAREN@8..9 ")"
  EOF@9..9 ""
