compiler/mesh-parser/tests/snapshots/parser_tests__type_alias_generic.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"type StringResult<T> = Result<T, String>\")"
---
SOURCE_FILE@0..40
  TYPE_ALIAS_DEF@0..40
    TYPE_KW@0..4 "type"
    WHITESPACE@4..5 " "
    NAME@5..17
      IDENT@5..17 "StringResult"
    GENERIC_PARAM_LIST@17..20
      LT@17..18 "<"
      IDENT@18..19 "T"
      GT@19..20 ">"
    WHITESPACE@20..21 " "
    EQ@21..22 "="
    WHITESPACE@22..23 " "
    IDENT@23..29 "Result"
    GENERIC_ARG_LIST@29..40
      LT@29..30 "<"
      IDENT@30..31 "T"
      COMMA@31..32 ","
      WHITESPACE@32..33 " "
      IDENT@33..39 "String"
      GT@39..40 ">"
  EOF@40..40 ""
