compiler/mesh-parser/tests/snapshots/parser_tests__type_alias_pub.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"pub type Url = String\")"
---
SOURCE_FILE@0..21
  TYPE_ALIAS_DEF@0..21
    VISIBILITY@0..3
      PUB_KW@0..3 "pub"
    WHITESPACE@3..4 " "
    TYPE_KW@4..8 "type"
    WHITESPACE@8..9 " "
    NAME@9..12
      IDENT@9..12 "Url"
    WHITESPACE@12..13 " "
    EQ@13..14 "="
    WHITESPACE@14..15 " "
    IDENT@15..21 "String"
  EOF@21..21 ""
